# ClangLearn

./: .clang-format  CMakeLists.txt  Readme.md
sample/: header.hpp
src/: main.cpp
